crates/openrouter-macros/tests/ui/lookup__dynamic_variant_missing.stderr
error: OpenRouter model `perceptron/perceptron-mk1:nitro` does not support required capability(s): param::tools
 --> tests/ui/lookup__dynamic_variant_missing.rs:3:37
  |
3 | const MODEL: &str = model_supports!("perceptron/perceptron-mk1:nitro", param::tools);
  |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
